<resources>
    <string name="app_name">Agri</string>
    <string name="Register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="reqCode">Request Code</string>
    <string name="add_crop">Add Crop</string>
    <string name="add">Add</string>
    <string name="aadhar_card_no">Aadhar Card No.</string>
    <string name="email_if_available">Email if Available</string>
    <string name="continue_btn">Continue</string>
    <string name="location">Location</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="date">Date</string>
    <string name="crop_name">Crop Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="upload_new_image">Upload new image</string>
    <string name="enter_name">Enter Name</string>
</resources>
