<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_crop"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/cropname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_local_florist_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/crop_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/totalQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_equalizer_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/total_quantity"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="10dp" />

    <EditText
        android:id="@+id/unitPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_account_balance_wallet_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/unit_price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="10dp" />


    <EditText
        android:id="@+id/expectedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_today_black_24dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/date"
        android:inputType="date"
        android:focusable="false"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Switch
            android:id="@+id/is_organic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="Organic"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/is_delivered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="Delivered"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>